# NiftyMIC_GUI

./: .gitignore  README.md  pyproject.toml
niftymic_gui/: __main__.py  exceptions.py  gui.py  helpers.py  main.py  mri_process.py  process_utils.py  reconstruction.py  settings.py
niftymic_gui_api/: .gitignore  Cargo.toml  flake.nix
niftymic_gui_api/config/: default.toml
niftymic_gui_api/src/: config.rs  niftymic.rs  spawn.rs
scripts/: NiftyMIC_GUI.desktop
