[tool.poetry]
name = "niftymic_gui"
version = "0.0.1"
description = ""
authors = ["TonyChG <tonychg7@pm.me>"]

[tool.poetry.scripts]
niftymic-gui = "niftymic_gui.main:main"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.1"
rich = "^12.4.1"
psutil = "^5.9.0"
PyQt5 = "^5.15.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
